--- a/infra/cilium/bgppeeringpolicy.yml
+++ b/infra/cilium/bgppeeringpolicy.yml
@@ -8,18 +8,18 @@ spec: # CiliumBGPPeeringPolicySpec
       bgp-policy: a
   virtualRouters: # []CiliumBGPVirtualRouter
   - localASN: 65001
-    # exportPodCIDR: true
+    exportPodCIDR: true
     neighbors: # []CiliumBGPNeighbor
     - peerAddress: '10.10.10.1/32'
       peerASN: 65001
       #authSecretRef: bgpsecret
-      #eBGPMultihopTTL: 10
-      #connectRetryTimeSeconds: 120
-      #holdTimeSeconds: 90
-      #keepAliveTimeSeconds: 30
-      #gracefulRestart:
-      #  enabled: true
-      #  restartTimeSeconds: 120
+      eBGPMultihopTTL: 10
+      connectRetryTimeSeconds: 120
+      holdTimeSeconds: 90
+      keepAliveTimeSeconds: 30
+      gracefulRestart:
+        enabled: true
+        restartTimeSeconds: 120
     serviceSelector:
         matchExpressions:
           - {key: somekey, operator: NotIn, values: ['never-used-value']}
