--- a/apps/terrakube/app.yaml
+++ b/apps/terrakube/app.yaml
@@ -11,6 +11,51 @@ spec:
     targetRevision: 3.17.1
     helm:
       releaseName: terrakube
+      valuesObject:
+        dex:
+          config:
+            issuer: http://terrakube-api.minikube.net/dex ## CHANGE THIS DOMAIN
+            #.....
+            #PUT ALL THE REST OF THE DEX CONFIG AND UPDATE THE URL WITH THE NEW DOMAIN
+            #.....
+
+        ## Ingress properties
+        ingress:
+          useTls: false
+          ui:
+            enabled: true
+            domain: "terrakube-ui.minikube.net" ## CHANGE THIS DOMAIN
+            path: "/(.*)"
+            pathType: "Prefix" 
+            annotations:
+              kubernetes.io/ingress.class: nginx
+              nginx.ingress.kubernetes.io/use-regex: "true"
+          api:
+            enabled: true
+            domain: "terrakube-api.minikube.net" ## CHANGE THIS DOMAIN
+            path: "/(.*)"
+            pathType: "Prefix"
+            annotations:
+              kubernetes.io/ingress.class: nginx
+              nginx.ingress.kubernetes.io/use-regex: "true"
+              nginx.ingress.kubernetes.io/configuration-snippet: "proxy_set_header Authorization $http_authorization;"
+          registry:
+            enabled: true
+            domain: "terrakube-reg.minikube.net" ## Change to your customer domain
+            path: "/(.*)"
+            pathType: "Prefix"
+            annotations:
+              kubernetes.io/ingress.class: nginx
+              nginx.ingress.kubernetes.io/use-regex: "true"
+              nginx.ingress.kubernetes.io/configuration-snippet: "proxy_set_header Authorization $http_authorization;"
+          dex:
+            enabled: true
+            path: "/dex/(.*)"
+            pathType: "Prefix"
+            annotations:
+              kubernetes.io/ingress.class: nginx
+              nginx.ingress.kubernetes.io/use-regex: "true"
+              nginx.ingress.kubernetes.io/configuration-snippet: "proxy_set_header Authorization $http_authorization;"
   destination:
     server: "https://kubernetes.default.svc"
     namespace: terrakube
