--- a/apps/rook/app.yaml
+++ b/apps/rook/app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     chart: rook-ceph
     repoURL: https://charts.rook.io/release
-    targetRevision: v1.14.0
+    # targetRevision: v1.14.0
     helm:
       releaseName: rook-release
       valueFiles:
