--- a/apps/rook/ceph-cluster.yaml
+++ b/apps/rook/ceph-cluster.yaml
@@ -11,8 +11,8 @@ spec:
     targetRevision: 1.14.5
     helm:
       releaseName: rook-release
-      valueFiles:
-        - cluster-values.yaml
+      # valueFiles:
+      #   - cluster-values.yaml
   destination:
     server: "https://kubernetes.default.svc"
     namespace: rook-ceph
