--- a/apps/ceph-cluster/ceph-cluster.yaml
+++ b/apps/ceph-cluster/ceph-cluster.yaml
@@ -12,7 +12,7 @@ spec:
     helm:
       releaseName: rook-release
       valueFiles:
-        - cluster-values.yaml
+        - values.yaml
   destination:
     server: "https://kubernetes.default.svc"
     namespace: rook-ceph
