--- a/apps/ceph-cluster/values.yaml
+++ b/apps/ceph-cluster/values.yaml
@@ -1,4 +1,4 @@
 cephClusterSpec:
-cephBlockPools: {}
-cephObjectStores: {}
-cephFileSystems: {}
+cephBlockPools: 
+cephObjectStores: 
+cephFileSystems: 
