--- a/apps/rook/rook-operator.yaml
+++ b/apps/rook/rook-operator.yaml
@@ -12,7 +12,7 @@ spec:
     helm:
       releaseName: rook-release
       valueFiles:
-        - values.yaml
+        - ../../values/rook/values.yaml
   destination:
     server: "https://kubernetes.default.svc"
     namespace: rook-ceph
