--- a/argocd/app.yaml
+++ b/argocd/app.yaml
@@ -9,8 +9,8 @@ spec:
     repoURL: https://github.com/drewjprosser/home-argo.git
     targetRevision: HEAD 
     path: apps
-    # directory:
-    #   recurse: true
+    directory:
+      recurse: true
   destination:
     server: "https://kubernetes.default.svc"
     namespace: argocd
