update ceph-cluster values path

--- a/argocd/app.yaml
+++ b/argocd/app.yaml
@@ -10,6 +10,7 @@ spec:
     targetRevision: HEAD 
     path: apps
     directory:
+      exclude: 'values.yaml'
       recurse: true
   destination:
     server: "https://kubernetes.default.svc"
