--- a/apps/ceph-cluster/ingress.yaml
+++ b/apps/ceph-cluster/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
+  ingressClassName: nginx
   rules:
   - host: ceph.int.prossertech.com
     http:
