--- a/apps/terrakube/app.yaml
+++ b/apps/terrakube/app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: terrakube
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
