fix hubble ingress

--- a/cilium/hubbleingress.yaml
+++ b/cilium/hubbleingress.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     name: hubble-ui
 spec:
-  ingressClassName: nginx
+  ingressClassName: cilium
   rules:
   - host: hubble.int.prossertech.com
     http:
