--- a/terrakube/app.yaml
+++ b/terrakube/app.yaml
@@ -16,3 +16,5 @@ spec:
   destination:
     server: "https://kubernetes.default.svc"
     namespace: terrakube
+  syncPolicy:
+    - CreateNamespace=true
