--- a/apps/argocd/app.yaml
+++ b/apps/argocd/app.yaml
@@ -18,4 +18,6 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: argocd
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
