--- a/apps/rook/app.yaml
+++ b/apps/rook/app.yaml
@@ -19,4 +19,5 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: rook-ceph
   syncPolicy:
-    - CreateNamespace=true
+    syncOptions:
+      - CreateNamespace=true
