--- a/apps/terrakube/app.yaml
+++ b/apps/terrakube/app.yaml
@@ -17,4 +17,5 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: terrakube
   syncPolicy:
-    - CreateNamespace=true
+    syncOptions:
+      - CreateNamespace=true
