--- a/apps/argocd/app.yaml
+++ b/apps/argocd/app.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: HEAD 
     path: apps
     directory:
-      exclude: 'values.yaml'
+    #  exclude: 'values.yaml'
       recurse: true
   destination:
     server: "https://kubernetes.default.svc"
