--- a/apps/ingress-nginx/app.yaml
+++ b/apps/ingress-nginx/app.yaml
@@ -17,7 +17,7 @@ spec:
         - name: controller.extraArgs.enable-ssl-passthrough
           value: ""
         - name: controller.allowSnippetAnnotations
-          value: true
+          value: "true"
   destination:
     server: "https://kubernetes.default.svc"
     namespace: ingress-nginx
