fix structure, app of apps, move rook ceph from helm to kustomize

--- a/apps/cilium/nodelabels.yaml
+++ b/apps/cilium/nodelabels.yaml
@@ -22,6 +22,20 @@ metadata:
 apiVersion: v1
 kind: Node
 metadata:
-  name: talos-worker-03-gpu
+  name: talos-worker-05-gpu
+  labels:
+    bgp-policy: a
+--- 
+apiVersion: v1
+kind: Node
+metadata:
+  name: talos-worker-03
+  labels:
+    bgp-policy: a
+---
+apiVersion: v1
+kind: Node
+metadata:
+  name: talos-worker-04
   labels:
     bgp-policy: a
