--- a/apps/cilium/app.yaml
+++ b/apps/cilium/app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd
+  name: cilium
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -10,10 +10,10 @@ spec:
   source:
     repoURL: https://github.com/drewjprosser/home-argo.git
     targetRevision: HEAD 
-    path: apps/argocd
+    path: apps/cilium
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: argocd
+    namespace: kube-system
   syncPolicy:
     automated:
       prune: false
