--- a/apps/rook-ceph/common.yaml
+++ b/apps/rook-ceph/common.yaml
@@ -15,6 +15,8 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cephfs-csi-nodeplugin
+  labels:
+    pod-security.kubernetes.io/enforce: privileged
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
