--- a/apps/rook-ceph/resources/ceph-cluster.yaml
+++ b/apps/rook-ceph/resources/ceph-cluster.yaml
@@ -246,37 +246,37 @@ spec:
     mgr: system-cluster-critical
     #crashcollector: rook-ceph-crashcollector-priority-class
   storage: # cluster level storage configuration and selection
-    useAllNodes: false
+    useAllNodes: true
     useAllDevices: true
     #deviceFilter:
     config:
       # crushRoot: "custom-root" # specify a non-default root label for the CRUSH map
       # metadataDevice: "md0" # specify a non-rotational storage so ceph-volume will use it as block db device of bluestore.
-      # databaseSizeMB: "1024" # uncomment if the disks are smaller than 100 GB
+      databaseSizeMB: "1024" # uncomment if the disks are smaller than 100 GB
       # osdsPerDevice: "1" # this value can be overridden at the node or device level
       # encryptedDevice: "true" # the default value for this option is "false"
     # Individual nodes and their config can be specified as well, but 'useAllNodes' above must be set to false. Then, only the named
     # nodes below will be used as storage resources.  Each node's 'name' field should match their 'kubernetes.io/hostname' label.
-    nodes:
-      - name: "talos-worker-01"
-        devices: # specific devices to use for storage can be specified for each node
-          - name: "sdb"
-          # - name: "nvme01" # multiple osds can be created on high performance devices
-          #   config:
-          #     osdsPerDevice: "5"
-          # - name: "/dev/disk/by-id/ata-ST4000DM004-XXXX" # devices can be specified using full udev paths
-        config: # configuration can be specified at the node level which overrides the cluster level config
-      # - name: "172.17.4.301"
-      #   deviceFilter: "^sd."
-      - name: "talos-worker-02"
-        devices: # specific devices to use for storage can be specified for each node
-          - name: "sdb"
-      - name: "talos-worker-03"
-        devices: # specific devices to use for storage can be specified for each node
-          - name: "sdb"
-      - name: "talos-worker-04"
-        devices: # specific devices to use for storage can be specified for each node
-          - name: "sdb"
+    # nodes:
+    #   - name: "talos-worker-01"
+    #     devices: # specific devices to use for storage can be specified for each node
+    #       - name: "sdb"
+    #       # - name: "nvme01" # multiple osds can be created on high performance devices
+    #       #   config:
+    #       #     osdsPerDevice: "5"
+    #       # - name: "/dev/disk/by-id/ata-ST4000DM004-XXXX" # devices can be specified using full udev paths
+    #     config: # configuration can be specified at the node level which overrides the cluster level config
+    #   # - name: "172.17.4.301"
+    #   #   deviceFilter: "^sd."
+    #   - name: "talos-worker-02"
+    #     devices: # specific devices to use for storage can be specified for each node
+    #       - name: "sdb"
+    #   - name: "talos-worker-03"
+    #     devices: # specific devices to use for storage can be specified for each node
+    #       - name: "sdb"
+    #   - name: "talos-worker-04"
+    #     devices: # specific devices to use for storage can be specified for each node
+    #       - name: "sdb"
     # when onlyApplyOSDPlacement is false, will merge both placement.All() and placement.osd
     onlyApplyOSDPlacement: false
     # Time for which an OSD pod will sleep before restarting, if it stopped due to flapping
