--- a/apps/nodelabels.yaml
+++ b/apps/nodelabels.yaml
@@ -3,6 +3,7 @@ kind: Node
 metadata:
   name: talos-control-01
   labels:
+    bgp-policy: a
     kubernetes.io/hostname: ''
 --- 
 apiVersion: v1
@@ -10,6 +11,7 @@ kind: Node
 metadata:
   name: talos-worker-01
   labels:
+    bgp-policy: a
     kubernetes.io/hostname: ''
 ---
 apiVersion: v1
@@ -17,6 +19,7 @@ kind: Node
 metadata:
   name: talos-worker-02
   labels:
+    bgp-policy: a
     kubernetes.io/hostname: ''
 --- 
 apiVersion: v1
@@ -24,6 +27,7 @@ kind: Node
 metadata:
   name: talos-worker-05-gpu
   labels:
+    bgp-policy: a
     kubernetes.io/hostname: ''
 --- 
 apiVersion: v1
@@ -31,6 +35,7 @@ kind: Node
 metadata:
   name: talos-worker-03
   labels:
+    bgp-policy: a
     kubernetes.io/hostname: ''
 ---
 apiVersion: v1
@@ -38,4 +43,5 @@ kind: Node
 metadata:
   name: talos-worker-04
   labels:
+    bgp-policy: a
     kubernetes.io/hostname: ''
