--- a/apps/rook-ceph/resources/ceph-cluster.yaml
+++ b/apps/rook-ceph/resources/ceph-cluster.yaml
@@ -13,7 +13,7 @@ spec:
     allowMultiplePerNode: false
   mgr:
     count: 2
-    allowMultiplePerNode: false
+    allowMultiplePerNode: true
     modules:
       - name: rook
         enabled: true
