--- a/apps/rook-ceph/kustomization.yaml
+++ b/apps/rook-ceph/kustomization.yaml
@@ -3,4 +3,5 @@ resources:
   - resources/crds.yaml 
   - resources/operator.yaml
   - resources/toolbox.yaml
-  - resources/ceph-cluster.yaml
+  - resources/ingress.yaml
+  # - resources/ceph-cluster.yaml
