fix ingress, add cluster

--- a/apps/rook-ceph/kustomization.yaml
+++ b/apps/rook-ceph/kustomization.yaml
@@ -4,4 +4,4 @@ resources:
   - resources/operator.yaml
   - resources/toolbox.yaml
   - resources/ingress.yaml
-  # - resources/ceph-cluster.yaml
+  - resources/ceph-cluster.yaml
