--- a/apps/rook-ceph/resources/ceph-cluster.yaml
+++ b/apps/rook-ceph/resources/ceph-cluster.yaml
@@ -3,6 +3,8 @@ kind: CephCluster
 metadata:
   name: rook-ceph
   namespace: rook-ceph
+  labels:
+    pod-security.kubernetes.io/enforce: privileged
 spec:
   cephVersion:
     image: quay.io/ceph/ceph:v18.2.2
