--- a/apps/rook-ceph/resources/ceph-cluster.yaml
+++ b/apps/rook-ceph/resources/ceph-cluster.yaml
@@ -11,7 +11,7 @@ spec:
   dataDirHostPath: /var/lib/rook
   mon:
     count: 3
-    allowMultiplePerNode: false
+    allowMultiplePerNode: true
   mgr:
     count: 1
     allowMultiplePerNode: true
