add block pool and storage class

--- a/apps/rook-ceph/kustomization.yaml
+++ b/apps/rook-ceph/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
   - resources/ingress.yaml
   - resources/ceph-cluster.yaml
   - resources/object.yaml
+  - resources/storageclass.yaml
+  - resources/blockpool.yaml
