--- a/apps/rook-ceph/kustomization.yaml
+++ b/apps/rook-ceph/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - resources/object.yaml
   - resources/storageclass.yaml
   - resources/blockpool.yaml
-  - resources/emptystorageclass.yaml
+  - resources/mgrblockpool.yaml
