fix rook mgr module

--- a/apps/rook-ceph/kustomization.yaml
+++ b/apps/rook-ceph/kustomization.yaml
@@ -1,6 +1,7 @@
 resources:
   - resources/common.yaml
-  - resources/crds.yaml 
+  - resources/crds.yaml
+  - resources/emptystorageclass.yaml
   - resources/operator.yaml
   - resources/toolbox.yaml
   - resources/ingress.yaml
