--- a/apps/rook-ceph/resources/filesystem/filesystem.yaml
+++ b/apps/rook-ceph/resources/filesystem/filesystem.yaml
@@ -1,7 +1,7 @@
 apiVersion: ceph.rook.io/v1
 kind: CephFilesystem
 metadata:
-  name: myfs
+  name: testfs
   namespace: rook-ceph
 spec:
   metadataPool:
