fix other name issues

--- a/apps/rook-ceph/resources/filesystem/storageclass.yaml
+++ b/apps/rook-ceph/resources/filesystem/storageclass.yaml
@@ -10,11 +10,11 @@ parameters:
   clusterID: rook-ceph
 
   # CephFS filesystem name into which the volume shall be created
-  fsName: myfs
+  fsName: testfs
 
   # Ceph pool into which the volume shall be created
   # Required for provisionVolume: "true"
-  pool: myfs-replicated
+  pool: testfs-replicated
 
   # The secrets contain Ceph admin credentials. These are generated automatically by the operator
   # in the same namespace as the cluster.
