--- a/apps/nvidia.yaml
+++ b/apps/nvidia.yaml
@@ -7,7 +7,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: jellyfin
+    namespace: nvidia-device-plugin
     server: https://kubernetes.default.svc
   project: default
   source:
