--- a/apps/nvidia/device-plugin.yaml
+++ b/apps/nvidia/device-plugin.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    chart: nvdp
+    chart: nvidia-device-plugin
     repoURL: https://nvidia.github.io/k8s-device-plugin
     targetRevision: 0.15.0
     helm:
