update helm values

--- a/apps/nvidia/device-plugin.yaml
+++ b/apps/nvidia/device-plugin.yaml
@@ -16,6 +16,8 @@ spec:
       parameters:
         - name: "runtimeClassName"
           value: "nvidia"
+        - name: "gfd.enabled"
+          value: "true"
   destination:
     server: "https://kubernetes.default.svc"
     namespace: nvidia-device-plugin
