--- a/apps/jellyfin/deployment.yaml
+++ b/apps/jellyfin/deployment.yaml
@@ -37,12 +37,12 @@ spec:
         resources:
           requests:
             nvidia.com/gpu.shared: 1
-            memory: "1024Mi"
-            cpu: "1.0"
+            memory: "1Gi"
+            cpu: "1"
           limits:
             nvidia.com/gpu.shared: 1
-            memory: "2048Mi"
-            cpu: "4.0"
+            memory: "2Gi"
+            cpu: "2"
         ports:
           - containerPort: 8096
           - containerPort: 1900
