--- a/infra/cloudflared.yaml
+++ b/infra/cloudflared.yaml
@@ -1,21 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nvidia
+  name: cloudflared
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+  - resources-finalizer.argocd.argoproj.io
 spec:
-  destination:
-    namespace: nvidia-device-plugin
-    server: https://kubernetes.default.svc
   project: default
   source:
-    path: apps/nvidia
     repoURL: https://github.com/drewjprosser/home-argo.git
-    targetRevision: HEAD
-    directory: 
-      recurse: true
+    targetRevision: HEAD 
+    path: infra/cloudflared
+  destination:
+    server: "https://kubernetes.default.svc"
+    namespace: cloudflared
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
