--- a/infra/nvidia.yaml
+++ b/infra/nvidia.yaml
@@ -1,22 +1,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: rook-ceph
+  name: nvidia
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: rook-ceph
+    namespace: nvidia-device-plugin
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: apps/rook-ceph/resources
+    path: infra/nvidia
     repoURL: https://github.com/drewjprosser/home-argo.git
     targetRevision: HEAD
     directory: 
       recurse: true
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true
