--- a/infra/reloader.yaml
+++ b/infra/reloader.yaml
@@ -1,20 +1,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: applications
+  name: reloader
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: https://github.com/drewjprosser/home-argo.git
-    targetRevision: HEAD 
-    path: apps
+    chart: reloader
+    repoURL: https://stakater.github.io/stakater-charts
+    targetRevision: 0.15.0
+    helm:
+      releaseName: reloader
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: argocd
+    namespace: reloader
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true
