--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,7 @@ spec:
   source:
     repoURL: https://github.com/drewjprosser/home-argo.git
     targetRevision: HEAD 
+    path: .
   destination:
     server: "https://kubernetes.default.svc"
     namespace: argocd
