--- a/apps.yaml
+++ b/apps.yaml
@@ -10,11 +10,11 @@ spec:
   source:
     repoURL: https://github.com/drewjprosser/home-argo.git
     targetRevision: HEAD 
-    path: .
+    path: apps
   destination:
     server: "https://kubernetes.default.svc"
     namespace: argocd
   syncPolicy:
     automated:
-      # prune: true
+      prune: true
       selfHeal: true
