--- a/infra.yaml
+++ b/infra.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: infra
+  name: infrastructure
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
