--- a/apps/jellyfin/deployment.yaml
+++ b/apps/jellyfin/deployment.yaml
@@ -31,11 +31,11 @@ spec:
             value: http://jellyfin-svc.jellyfin.svc.cluster.local
         resources:
           requests:
-            nvidia.com/gpu.shared: "1"
+            nvidia.com/gpu: "1"
             memory: "1Gi"
             cpu: "1"
           limits:
-            nvidia.com/gpu.shared: "1"
+            nvidia.com/gpu: "1"
             memory: "2Gi"
             cpu: "2"
         ports:
