--- a/infra/nvidia/device-plugin.yaml
+++ b/infra/nvidia/device-plugin.yaml
@@ -14,8 +14,8 @@ spec:
     helm:
       releaseName: nvidia-device-plugin
       parameters:
-        # - name: "runtimeClassName"
-        #   value: "nvidia"
+        - name: "runtimeClassName"
+          value: "nvidia"
         - name: "gfd.enabled"
           value: "true"
         - name: "config.name"
