update operator settings

--- a/infra/gpu-operator.yaml
+++ b/infra/gpu-operator.yaml
@@ -13,6 +13,9 @@ spec:
     targetRevision: 24.3.0
     helm:
       releaseName: gpu-operator
+      parameters:
+        - name: "driver.enabled"
+          value: "false"
   destination:
     server: "https://kubernetes.default.svc"
     namespace: gpu-operator
