--- a/infra/gpu-operator.yaml
+++ b/infra/gpu-operator.yaml
@@ -20,6 +20,9 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: gpu-operator
   syncPolicy:
+    managedNamespaceMetadata:
+      labels:
+        pod-security.kubernetes.io/enforce: privileged
     syncOptions:
       - CreateNamespace=true
     automated:
