--- a/apps/jellyfin.yaml
+++ b/apps/jellyfin.yaml
@@ -17,6 +17,9 @@ spec:
     directory: 
       recurse: true
   syncPolicy:
+    managedNamespaceMetadata:
+      labels:
+        pod-security.kubernetes.io/enforce: privileged
     syncOptions:
       - CreateNamespace=true
     automated:
