--- a/apps/jellyfin/deployment.yaml
+++ b/apps/jellyfin/deployment.yaml
@@ -25,6 +25,9 @@ spec:
         securityContext:
           runAsUser: 1001
           runAsGroup: 1001
+          seccompProfile:
+            type: Unconfined
+          procMount: Unmasked
         env:
           - name: JELLYFIN_PublishedServerUrl
             value: http://jellyfin.prossertech.com
