--- a/apps/jellyfin/deployment.yaml
+++ b/apps/jellyfin/deployment.yaml
@@ -23,8 +23,8 @@ spec:
       - name: jellyfin
         image: jellyfin/jellyfin
         securityContext:
-          runAsUser: 1001
-          runAsGroup: 1001
+          # runAsUser: 1001
+          # runAsGroup: 1001
           seccompProfile:
             type: Unconfined
         env:
