--- a/apps/vaultwarden/deployment.yaml
+++ b/apps/vaultwarden/deployment.yaml
@@ -23,6 +23,8 @@ spec:
         env:
           - name: WEBSOCKET_ENABLED
             value: "true"
+          - name: Domain
+            value: "https://vault.prossertech.com"
         resources:
           requests:
             memory: "256Mi"
