--- a/apps/vaultwarden/ingress.yaml
+++ b/apps/vaultwarden/ingress.yaml
@@ -1,22 +1,22 @@
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: vaultwarden-ingress
-#   labels:
-#     name: vaultwarden-ingress
-# spec:
-#   ingressClassName: nginx
-#   rules:
-#   - host: vaultwarden.int.prossertech.com
-#     http:
-#       paths:
-#       - pathType: Prefix
-#         path: "/"
-#         backend:
-#           service:
-#             name: vaultwarden-svc
-#             port: 
-#               name: http
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: vaultwarden-ingress
+  labels:
+    name: vaultwarden-ingress
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: vaultwarden.int.prossertech.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: vaultwarden-svc
+            port: 
+              name: http
 ---
 apiVersion: v1
 kind: Service
