--- a/apps/vaultwarden/deployment.yaml
+++ b/apps/vaultwarden/deployment.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -42,3 +41,18 @@ spec:
           nfs:
             server: storage-pve-02.int.prossertech.com
             path: /data/rke/vaultwarden/data
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: vaultwarden-svc
+  namespace: vaultwarden
+spec:
+  selector:
+    app.kubernetes.io/name: vaultwarden
+    app.kubernetes.io/instance: vaultwarden-1
+    app.kubernetes.io/component: server
+  ports:
+  - name: http
+    protocol: TCP
+    port: 80
