fix cloudflared deployment

--- a/infra/cloudflared/deployment.yaml
+++ b/infra/cloudflared/deployment.yaml
@@ -87,7 +87,7 @@ spec:
       # Create a config.yaml file from the ConfigMap below.
       - name: config
         configMap:
-          name: cloudflared
+          name: cloudflared-configmap
           items:
           - key: config.yaml
             path: config.yaml
