--- a/infra/cilium/l2announcement.yaml
+++ b/infra/cilium/l2announcement.yaml
@@ -2,6 +2,7 @@ apiVersion: "cilium.io/v2alpha1"
 kind: CiliumL2AnnouncementPolicy
 metadata:
   name: policy1
+  namespace: kube-system
 spec:
   nodeSelector:
     matchExpressions:
