--- a/infra/tools/busybox.yaml
+++ b/infra/tools/busybox.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: busybox
-  namespace: default
+  namespace: cloudflared
 spec:
   containers:
   - image: busybox
