--- a/infra/sealed-secrets.yaml
+++ b/infra/sealed-secrets.yaml
@@ -13,6 +13,9 @@ spec:
     chart: sealed-secrets
     helm:
       releaseName: sealed-secrets
+      parameters:
+        - name: fullnameOverride
+          value: sealed-secrets-controller
   destination:
     server: "https://kubernetes.default.svc"
     namespace: kube-system
