fix idrac-fan-control-pve-02 secretref

--- a/apps/idrac-fan-control/deployment.yaml
+++ b/apps/idrac-fan-control/deployment.yaml
@@ -65,7 +65,7 @@ spec:
         - name: IDRAC_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: idrac-credentials
+              name: idrac-credentials-pve-02
               key: IDRAC_PASSWORD
         - name: FAN_SPEED
           value: "20" # %
