--- a/infra/prometheus-stack.yaml
+++ b/infra/prometheus-stack.yaml
@@ -17,6 +17,9 @@ spec:
     server: "https://kubernetes.default.svc"
     namespace: prometheus
   syncPolicy:
+    managedNamespaceMetadata:
+      labels:
+        pod-security.kubernetes.io/enforce: privileged
     syncOptions:
       - CreateNamespace=true
     automated:
