--- a/infra/prometheus-stack.yaml
+++ b/infra/prometheus-stack.yaml
@@ -13,6 +13,16 @@ spec:
     targetRevision: 60.3.0
     helm:
       releaseName: kube-prometheus-stack
+      valuesObject:
+        ingress:
+          enabled: true
+          ingressClassName: nginx
+          hosts:
+            - prometheus.int.prossertech.com
+            - grafana.int.prossertech.com
+            - alert.int.prossertech.com
+          paths: 
+            - /
   destination:
     server: "https://kubernetes.default.svc"
     namespace: prometheus
