--- a/infra/prometheus-stack.yaml
+++ b/infra/prometheus-stack.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: kube-prometheus-stack
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -25,7 +25,7 @@ spec:
             - /
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: prometheus
+    namespace: kube-prometheus-stack
   syncPolicy:
     managedNamespaceMetadata:
       labels:
